Small changes. Changed the look of the footer. Removed footer navigation. Added optional site config for additional copyright. Changed copyright to be dynamic. Fixed issue with media playing when collapsed after being paused.

--- a/resources/assets/sass/global/footer.scss
+++ b/resources/assets/sass/global/footer.scss
@@ -1,38 +1,35 @@
 /* Page Footer */
 footer {
-	z-index: 1;
-	clear: both;
-	padding: 0;
-	margin: 0;
+    z-index: 1;
+    clear: both;
+    padding: 0;
+    margin: 0;
 }
 
 #canary-bird {
-	height: 0;
-	width: 0;
-	margin: 0;
-	overflow: visible;
+    height: 0;
+    width: 0;
+    margin: 0;
+    overflow: visible;
 }
-	#canary-img {
-		position: absolute;
-		bottom: auto;
-		right: 1em;
+    #canary-img {
+        position: absolute;
+        bottom: auto;
+        right: 1em;
 
-		height: auto;
-		width: auto;
+        height: auto;
+        width: auto;
 
-		max-width: 3em;
-		max-height: 3em;
-	}
+        max-width: 3em;
+        max-height: 3em;
+    }
 
 #footnotes {
-	background: #333;
-	padding: 0.5em 0;
+    padding: 0.5em 0;
 
-	color: #ffffff;
-	font-size: 16px;
-	text-align: center;
+    font-size: 0.9rem;
+    text-align: center;
 }
-	#footnotes .agpl-compliance {
-		color: #ffffff;
-		text-decoration: underline;
-	}
+    #footnotes .agpl-compliance {
+        text-decoration: underline;
+    }
