--- a/resources/assets/sass/global/post-attachments.scss
+++ b/resources/assets/sass/global/post-attachments.scss
@@ -238,7 +238,7 @@
                         cursor: zoom-out;
                     }
                     .attachment-link .attachment-type-video {
-                        box-sizing: border-box;
+                        box-sizing: content-box;
                         border-style: solid;
                         border-width: 17px;
 
